examples/python-web-app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app
  labels:
    app: python-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: python-app
  template:
    metadata:
      labels:
        app: python-app
    spec:
      containers:
      - name: python-app
        image: uchedev/python-app:v1
        volumeMounts:
        - name: db-connection
          mountPath: /opt
        ports:
          - containerPort: 8000
      volumes:
        - name: db-connection
          configMap:
            name: test-cm
