examples/python-web-app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-python-app
spec:
  type: NodePort
  selector:
    app: python-app
  ports:
    - port: 80
      targetPort: 8000
      # Optional field
      nodePort: 30007
